# django-datalog

./: .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  kaiko.sublime-workspace  pyproject.toml  pytest.ini  setup.py  simple_operator_test.py  test_core_functionality.py  test_fact_conjunction.py  test_final.py  test_inferred_facts.py  test_package.py  test_pytest.py  test_settings.py  test_working.py
django_datalog/: __init__.py  converter.py  facts.py  models.py  optimizer.py  query.py  query_analyzer.py  rules.py  variables.py
django_datalog/management/commands/: convert_to_orm.py
djdatalog/: README.md  __init__.py  apps.py  facts.py  models.py  query.py  rules.py
djdatalog/tests/: __init__.py  run_tests.py  test_basic_functionality.py  test_facts.py  test_family_example.py  test_q_objects.py  test_query_hydration.py  test_rules.py
docs/: README.md  django_orm_equivalents.md
test_project/: Makefile
test_project/testdjdatalog/: apps.py  models.py  rules.py  test_adaptive_planning.py  test_basic_functionality.py  test_context_rules.py  test_converter.py  test_cross_variable_constraints.py  test_disjunctive_rules.py  test_django_orm_equivalents.py  test_facts_and_rules.py  test_family_example.py  test_inferred_facts.py  test_operator_syntax.py  test_optimizer.py  test_q_objects.py  test_query_hydration.py  test_query_optimization.py  test_rule_validation.py  tests.py
test_project/testdjdatalog/migrations/: 0001_initial.py
test_project/testsite/: settings.py
